# SLH-Lab02

./: SLH_Lab02_ZacheoLuca.docx
student_template/: .env  .gitignore  Cargo.toml  main.rs
student_template/src/: backend.rs  consts.rs  database.rs  email.rs  main.rs  utils.rs
student_template/src/backend/: handlers_access.rs  handlers_refresh.rs  handlers_unauth.rs  middlewares.rs  models.rs  router.rs
student_template/src/utils/: crypto.rs  input.rs  jwt.rs  tests.rs
student_template/templates/: index.hbs  login.hbs
