[package]
name = "king_auth"
version = "0.1.0"
edition = "2021"
authors = ["Jean-François Pasche <jean-francois.pasche@heig-vd.ch>", "Maxim Golay <maxim.golay@heig-vd.ch>", "Pascal Perrenoud <pascal.perrenoud@heig-vd.ch", "Axel Vallon <axel.vallon@heig-vd.ch>"]

[dependencies]
anyhow = "1.0.75"
axum = {version = "0.7.1", features = ["json", "macros"]}
axum-extra = { version = "0.9.0", features = ["cookie"] }
bincode = "1.3.3"
env_logger = "0.10.1"
handlebars = { version = "4.5.0", features = ["dir_source"] }
http = "1.0.0"
log = "0.4.20"
once_cell = "1.18.0"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1.34.0", features = ["full"]}
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.6.1", features = ["v4"] }
time = {version = "0.3.30"}
serde_with = "3.4.0"
serde_millis = "0.1.1"
tower-sessions = "0.7.0"
tower = "0.4.13"
